--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "auther": "Farooq",
     "main": "server.js",
     "scripts": {
-      "start": "node src/server.js",
+      "start": "node server.js",
       "test": "jest"
     },
     "dependencies": {
